Added Matt's changes to shift container right

--- a/src/containers/SearchContainer/style.scss
+++ b/src/containers/SearchContainer/style.scss
@@ -1,6 +1,6 @@
 .search-container {
-    position: relative;
-    // left: 500px;
-    // top:200px;
+    position: fixed;
+    top: 50px;
+    right: 50px;
     z-index: 5;
 }
