--- a/src/containers/SearchContainer/Dropdown/style.scss
+++ b/src/containers/SearchContainer/Dropdown/style.scss
@@ -1,3 +1,8 @@
 .dropdown-container {
-    
+    #emojidropdown {
+        // There's some weirdness with padding and inputs - might need to change default styling
+        // padding: 10px, 41px, 10px, 41px;
+        width: 50px;
+        height: 39px;
+    }
 }
