--- a/src/containers/EarthContainer/style.scss
+++ b/src/containers/EarthContainer/style.scss
@@ -1,3 +1,23 @@
 .earth-container {
     position: absolute;
+    h1 {
+        color: white;
+        font-size: 2em;
+        position: fixed;
+        top: 50px;
+        left: 50px;
+        z-index: 5;
+    }
+    
+    span {
+        position: fixed;
+        bottom: 50px;
+        left: 46%;
+        z-index: 1;
+        label {
+            color: white;
+        }
+
+    }
+    
 }
