added placeholder fonts

--- a/src/containers/EarthContainer/style.scss
+++ b/src/containers/EarthContainer/style.scss
@@ -7,6 +7,7 @@
         top: 50px;
         left: 50px;
         z-index: 5;
+        font-family: 'Woodchuck-Bold';
     }
     
     span {
@@ -16,8 +17,10 @@
         z-index: 1;
         label {
             color: white;
+            font-family: 'Basier';
         }
 
     }
     
 }
+
