--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -35,3 +35,50 @@ html {
 a {
 	text-decoration: none;
 }
+
+// - - - FONTS - - -
+
+@font-face {
+    font-family: 'Woodchuck-Heavy';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Woodchuck-Heavy'), url('../fonts/Woodchuck-Heavy.woff2') format('woff2');
+    }
+
+@font-face {
+    font-family: 'Woodchuck-Bold';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Woodchuck-Bold'), url('../fonts/Woodchuck-Bold.woff2') format('woff2');
+    }
+
+@font-face {
+    font-family: 'Woodchuck-Light';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Woodchuck-Light'), url('../fonts/Woodchuck-Light.woff2') format('woff2');
+    }
+
+@font-face {
+    font-family: 'Woodchuck-Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Woodchuck-Regular'), url('../fonts/Woodchuck-Regular.woff2') format('woff2');
+    }
+
+@font-face {
+    font-family: 'Woodchuck-Thin';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Woodchuck-Thin'), url('../fonts/Woodchuck-Thin.woff2') format('woff2');
+    }
+
+
+@font-face {
+    font-family: 'Basier';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Basier'), url('../fonts/basiercircle-regular-webfont.woff') format('woff');
+    }
+
+    
