--- a/src/components/sightingtable/style.scss
+++ b/src/components/sightingtable/style.scss
@@ -13,7 +13,8 @@
     .sightingcard {
         color: #C6C6C5;
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        // justify-content: space-between;
         padding: 10px 0px 10px 0px;
         border-bottom: 1px dotted #C6C6C5;
         // box-shadow: 5px 5px rbga(255, 255, 255, 0.3);
@@ -33,6 +34,20 @@
             // transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
             // box-shadow: 0 6px 6px 0 grey;
             
+        }
+        
+        .card_overview {
+            display: flex;
+            justify-content: space-between;
+
+        }
+
+        .card_detail {
+            display: flex;
+            justify-content: space-between;
+            &.hidden {
+                display: none;
+            }
         }
 
     }
