--- a/src/containers/SearchContainer/Dropdown/style.scss
+++ b/src/containers/SearchContainer/Dropdown/style.scss
@@ -4,5 +4,8 @@
         // padding: 10px, 41px, 10px, 41px;
         width: 50px;
         height: 39px;
+        // background: rgba(125, 125, 124, 0.25);
+        // border-radius: 5%;
+        // color: white;
     }
 }
