sightingcard dropdown arrow rotates 180 deg when open

--- a/src/components/sightingtable/style.scss
+++ b/src/components/sightingtable/style.scss
@@ -56,9 +56,9 @@
             }
         }
 
-        #sightingdownarrow {
-            transform: scale(.5);
-        }
+        // #sightingdownarrow {
+        //     transform: scale(.5);
+        // }
 
     }
 
