--- a/src/components/search/style.scss
+++ b/src/components/search/style.scss
@@ -2,7 +2,14 @@
     display: flex;
     .searchbar-input {
         input {
-            height: 38px;
+            height: 50px;
+        }
+        #zipsearchsubmit {
+            // padding: 0px, 5px, 0px, 5px;
+            width: 105px;
+        }
+        #zipinput {
+            width: 200px;
         }
     }
 }
