--- a/src/containers/SearchContainer/Dropdown/style.scss
+++ b/src/containers/SearchContainer/Dropdown/style.scss
@@ -1,9 +1,14 @@
 .dropdown-container {
+    // font-size: 2.5em;
+
     #emojidropdown {
         // There's some weirdness with padding and inputs - might need to change default styling
         // padding: 10px, 41px, 10px, 41px;
-        width: 50px;
-        height: 39px;
+        width: 70px;
+        height: 50px;
+        font-size: 1.2em;
+        color: white;
+        // padding: 0px, 25px, 0px, 25px;
         // background: rgba(125, 125, 124, 0.25);
         // border-radius: 5%;
         // color: white;
