--- a/src/containers/SearchContainer/Dropdown/style.scss
+++ b/src/containers/SearchContainer/Dropdown/style.scss
@@ -8,6 +8,10 @@
         height: 50px;
         font-size: 1.2em;
         color: white;
+        background: rgba(27,29,33,0.95);
+        border-radius: 5px 0px 0px 5px;
+        color: #C6C6C5;
+        border: none;
         // padding: 0px, 25px, 0px, 25px;
         // background: rgba(125, 125, 124, 0.25);
         // border-radius: 5%;
