--- a/src/components/sightingtable/style.scss
+++ b/src/components/sightingtable/style.scss
@@ -8,6 +8,7 @@
     border-radius: 0px 0px 15px 15px;
     padding: 5px 15px 5px 15px;
     width: 375px;
+    // border-top: 3px solid #393939;
     font-family: "Basier";
     //changing width to pixels to try to help with details div expansion
     // previously: width: 135%;
@@ -18,8 +19,8 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        padding: 5px 0px 5px 0px;
-        border-bottom: 1px dotted #C6C6C5;
+        padding: 1px 0px 1px 0px;
+        border-bottom: 1px solid #393939;
         // width: 123%;
     }
 
