--- a/src/components/sightingtable/style.scss
+++ b/src/components/sightingtable/style.scss
@@ -6,8 +6,9 @@
     justify-content: space-around;
     background: rgba(27,29,33,0.75);
     border-radius: 0px 0px 15px 15px;
-    padding: 5px 15px 5px 15px;
-    width: 375px;
+    padding: 10px 15px 5px 15px;
+    margin-top: -5px;
+    width: 377px;
     // border-top: 3px solid #393939;
     font-family: "Basier";
     //changing width to pixels to try to help with details div expansion
