--- a/src/containers/SearchContainer/Dropdown/style.scss
+++ b/src/containers/SearchContainer/Dropdown/style.scss
@@ -4,14 +4,15 @@
     #emojidropdown {
         // There's some weirdness with padding and inputs - might need to change default styling
         // padding: 10px, 41px, 10px, 41px;
-        width: 70px;
+        width: 85px;
         height: 50px;
         font-size: 1.2em;
         color: white;
         background: rgba(27,29,33,0.95);
         border-radius: 5px 0px 0px 5px;
         color: #C6C6C5;
-        border: none;
+        // border: none;
+        border: 1px solid #C6C6C5;
         // padding: 0px, 25px, 0px, 25px;
         // background: rgba(125, 125, 124, 0.25);
         // border-radius: 5%;
