--- a/src/containers/SearchContainer/Dropdown/style.scss
+++ b/src/containers/SearchContainer/Dropdown/style.scss
@@ -7,15 +7,20 @@
         width: 85px;
         height: 50px;
         font-size: 1.2em;
-        color: white;
-        background: rgba(27,29,33,0.95);
         border-radius: 5px 0px 0px 5px;
-        color: #C6C6C5;
-        // border: none;
-        border: 1px solid #C6C6C5;
+        background: rgba(198,198,197,0.84);
+        color: rgba(27,29,33, 0.94);
+        border: none;
+        // border: 1px solid rgba(198,198,197,0.86);
+        
         // padding: 0px, 25px, 0px, 25px;
         // background: rgba(125, 125, 124, 0.25);
         // border-radius: 5%;
         // color: white;
+        &:hover {
+            background: #737373;
+            color: rgba(27,29,33, 0.90); 
+        }
     }
 }
+
