--- a/src/containers/SearchContainer/SearchResults/style.scss
+++ b/src/containers/SearchContainer/SearchResults/style.scss
@@ -1,1 +1,7 @@
 // Note: Currently no div wrapping sighting table in SearchResultsContainer
+
+// .searchresultscontainer {
+//     display: flex;
+//     justify-content: flex-end;
+//     flex-direction: column;
+// }
