--- a/src/containers/SearchContainer/style.scss
+++ b/src/containers/SearchContainer/style.scss
@@ -3,4 +3,8 @@
     top: 50px;
     right: 40px;
     z-index: 5;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+
 }
