--- a/src/components/faq/style.scss
+++ b/src/components/faq/style.scss
@@ -1,8 +1,7 @@
-
-.instructionshidden {
+.faqhidden {
     z-index: 5;
     position: fixed;
-    top: 68%;
+    bottom: 33%;
     left: 30px;
     color: white;
     background: rgba(27,29,33,0.75);
@@ -13,10 +12,10 @@
     font-size: .8em;
 }
 
-.instructionscontainer {
+.faqcontainer {
     z-index: 5;
     position: fixed;
-    top: 68%;
+    bottom: 33%;
     left: 30px;
     display: flex;
     flex-direction: column;
@@ -28,13 +27,11 @@
     width: 310px;
     font-family: "Basier";
     font-size: .9em;
-
     span {
         margin-left: 270px;
         cursor: pointer;
     }
-
-    .instructionsheader {
+    .faqheader {
         text-align: center;
         padding: 9px 0px 12px 0px!important;
         text-decoration: underline;
@@ -43,9 +40,20 @@
         }
     }
 
-    .instructionsstep {
-        padding: 10px 0px 10px 7px;
-        font-size: .8em;
+    .faqquestion {
+        padding: 5px 0px 10px 7px;
+        font-size: .9em;
+        font-weight: bold;
+        line-height: 1.25em;
     }
     
+    .faqanswer {
+        padding: 0px 0px 10px 18px;
+        font-size: .8em;
+        line-height: 1.2em;
+        p {
+            padding: 0px 0px 5px 0px;
+        }
+    }
+
 }
