--- a/src/containers/SearchContainer/SearchResults/style.scss
+++ b/src/containers/SearchContainer/SearchResults/style.scss
@@ -1,7 +1,5 @@
 // Note: Currently no div wrapping sighting table in SearchResultsContainer
 
-// .searchresultscontainer {
-//     display: flex;
-//     justify-content: flex-end;
-//     flex-direction: column;
-// }
+.searchresultscontainer {
+    width: 377px;
+}
