--- a/src/components/search/style.scss
+++ b/src/components/search/style.scss
@@ -12,7 +12,7 @@
         
         #zipsearchsubmit {
             // padding: 0px, 5px, 0px, 5px;
-            width: 125px;
+            width: 132px;
             font-family: "Basier";
             background: rgba(198,198,197,0.84);
             color: rgb(27,29,33);
@@ -21,6 +21,7 @@
             // color: #C6C6C5;  
             border-radius: 0px 5px 5px 0px;
             border: none;
+            
             // font-size: .6em;
             &:hover {
                 background: #737373;
@@ -30,20 +31,20 @@
             
         }
         #zipinput {
-            width: 165px;
+            width: 172px;
             font-family: "Basier";
             background: rgba(27,29,33,0.75);
-            color: #C6C6C5;            
+            color: #C6C6C5;
+            opacity: 1;            
             border: 1px solid rgba(198,198,197,0.84);
-            padding-left: 20px;
-            
+            padding-left: 25px;
+            letter-spacing: .13em;
             // font-size: 1.2em;
             &:focus {
                 border: 1px solid #C6C6C5 !important;
                 // background: red;
                 outline: none !important;
-                box-shadow: inset 0px 0px 3px 2px #1b697d;
-                
+                box-shadow: inset 0px 0px 3px 2px #4287f5;
             }
             &::-webkit-search-cancel-button {
                 -webkit-appearance: none;
@@ -57,12 +58,12 @@
                 pointer-events: all;
                 filter: invert(1);
             }
-        }
+            }
         
-        //Resets color of placeholder text from defailt grey to our grey
-        ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-            color: #C6C6C5;
-            opacity: 1; /* Firefox */
-          }
+            //Resets color of placeholder text from defailt grey to our grey
+            ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+                color: #C6C6C5;
+                opacity: 1; /* Firefox */
+            }
     }
 }
