--- a/src/containers/SearchContainer/Dropdown/style.scss
+++ b/src/containers/SearchContainer/Dropdown/style.scss
@@ -1,10 +1,25 @@
 .dropdown-container {
     // font-size: 2.5em;
+    
+    // .css-10lov95-container {
+    //     width: 85px!important;
+    //     margin-right: 95px;
+    //     .css-172ayq-control {
+    //         height: 48px!important;
+    //         .css-g1d714-ValueContainer {
+    //             // height: 48px!important;
+    //         }
+    //     }
+    // }
+    .css-12qbpla-option {
+        background: #4287f5;
+    }
+
 
     #emojidropdown {
         // There's some weirdness with padding and inputs - might need to change default styling
         // padding: 10px, 41px, 10px, 41px;
-        width: 85px;
+        width: 88px;
         height: 50px;
         font-size: 1.2em;
         border-radius: 5px 0px 0px 5px;
