--- a/src/components/credits/style.scss
+++ b/src/components/credits/style.scss
@@ -7,6 +7,7 @@
     color: white;
     opacity: .25;
     font-size: .65em;
+    font-family: 'Basier';
 
     a {
         border-bottom: 1px solid;
