--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -81,4 +81,11 @@ a {
     src: local('Basier'), url('../fonts/basiercircle-regular-webfont.woff') format('woff');
     }
 
+@font-face {
+    font-family: 'North';
+    font-style: normal;
+    font-weight: normal;
+    src: local('North'), url('../fonts/North.otf') format('woff');
+    }
+
     
