WIP onmousedown cursor grabbing on earth

--- a/src/components/search/style.scss
+++ b/src/components/search/style.scss
@@ -21,8 +21,8 @@
             // color: #C6C6C5;  
             border-radius: 0px 5px 5px 0px;
             border: none;
-            
-            // font-size: .6em;
+            cursor: pointer;
+
             &:hover {
                 background: #737373;
                 color: black; 
