replaced title font

--- a/src/components/sightingcard/style.scss
+++ b/src/components/sightingcard/style.scss
@@ -33,6 +33,14 @@
     // max-height: 400px;
     // overflow-y: auto;
 
+    #tabletitle {
+        font-family: "Basier";
+        color: #dedede;
+        text-align: center;
+        padding: 9px 0px 5px 0px!important;
+        // text-decoration: underline;
+    }
+
     .sightingheader {
         // color: #C6C6C5;
         color: #dedede;
