--- a/src/containers/EarthContainer/style.scss
+++ b/src/containers/EarthContainer/style.scss
@@ -11,8 +11,11 @@
         // font-family: 'Woodchuck-Bold';
         // text-shadow: 2px 2px #4287f5;
         // font-size: 2em;
-        font-size: 1.6em;
-        font-family: "North";
+        font-size: 1.7em;
+        font-family:  "Garet-heavy";
+        //font-family:  "Sora-ExtraBold";
+
+        letter-spacing: .1rem;
     }
 
     span {
