--- a/src/components/splashpage/style.scss
+++ b/src/components/splashpage/style.scss
@@ -17,7 +17,8 @@
         top: 50px;
         left: 50px;
         z-index: 8;
-        font-family: 'Woodchuck-Bold';
+        font-family:  "Garet-heavy";
+        //font-family:  "Sora-ExtraBold";
         animation-name: fadein;
         animation-duration: 2s;
         animation-timing-function: ease;
