adding grabbing cursor on mousedown over earth container

--- a/src/containers/EarthContainer/style.scss
+++ b/src/containers/EarthContainer/style.scss
@@ -2,6 +2,10 @@
     position: absolute;
     cursor: grab;
 
+    &:active {
+        cursor: grabbing;
+    }
+
     h1 {
         color: white;
         position: fixed;
