--- a/src/containers/EarthContainer/style.scss
+++ b/src/containers/EarthContainer/style.scss
@@ -7,7 +7,8 @@
     }
 
     h1 {
-        color: white;
+        //color: #dedede;
+        color: #b4caed;
         position: fixed;
         top: 50px;
         left: 50px;
