fixed emoji background on hover color

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -83,4 +83,7 @@ button {
 }
 p, h1, h2, h3, h4, h5, h6, blockquote, pre, ul, ol, li, table, tr, th, td, input, textarea {
   user-select: text;
+  // background-color: inherit;
+  // background: inherit;
+  // color:  inherit;
 }
