--- a/src/components/search/style.scss
+++ b/src/components/search/style.scss
@@ -41,9 +41,8 @@
             letter-spacing: .13em;
             // font-size: 1.2em;
             &:focus {
-                border: 1px solid #C6C6C5 !important;
-                // background: red;
-                outline: none !important;
+                // border: 1px solid #C6C6C5!important;
+                outline: none;
                 box-shadow: inset 0px 0px 3px 2px #4287f5;
             }
             &::-webkit-search-cancel-button {
@@ -57,6 +56,7 @@
                 margin-right: 10px;
                 pointer-events: all;
                 filter: invert(1);
+                cursor: pointer;
             }
             }
         
