--- a/src/containers/SearchContainer/Dropdown/style.scss
+++ b/src/containers/SearchContainer/Dropdown/style.scss
@@ -1,9 +1,14 @@
 .dropdown-container {
     #emojidropdownwrapper {
-        // border-radius: 5px 0px 0px 5px;
+        border-radius: 5px 0px 0px 5px;
         cursor: pointer;
-        background: transparent;
-        color: transparent;
+        pointer-events: none;
+        //background: none;
+        //color:inherit;
+        background-color: rgba(198,198,197,0.84);
+        //background: rgba(198,198,197,0.84);
+        color: rgb(27,29,33);
+        font-family: "Basier";
 
         &:hover {
             background: #737373;
@@ -11,7 +16,8 @@
         }
         //replaces the arrow in the value as we originally created it
         #emojidownarrow {
-            color: rgba(27,29,33, 0.94);
+            //color: rgba(27,29,33, 0.94);
+            //color:inherit;
             // z-index: 1;
             position: relative;
             left: 56px;
@@ -19,9 +25,16 @@
             height: 0px;
             font-size: .7em;
             // display: inline-block;
+            pointer-events: auto;
         }
     
-    
+        // #emojidropdownwrapper > #emojidownarrow {
+        //     // &:hover {
+        //     //     background: #737373;
+        //     //     color: rgba(27,29,33, 0.10); 
+        //     // }
+        // }
+
         #emojidropdown {
             // There's some weirdness with padding and inputs - might need to change default styling
             // padding: 10px, 41px, 10px, 41px;
@@ -29,17 +42,18 @@
             height: 50px;
             font-size: 1.4em;
             border-radius: 5px 0px 0px 5px;
-            background: rgba(198,198,197,0.84);
-            color: rgba(27,29,33, 0.94);
+            // background: rgba(198,198,197,0.84);
+            // color: rgba(27,29,33, 0.94);
+            color:inherit;
+            background:inherit;
             padding-right: 15px;
             border: none;
             cursor: pointer;
-
-            
-            &:hover {
-                background: #737373;
-                color: rgba(27,29,33, 0.90); 
-            }
+            pointer-events: auto;
+            // &:hover {
+            //     background: #737373;
+            //     //color: rgb(27,29,33); 
+            // }
         }
     }
 }
