changed title copy to tracker

--- a/src/containers/EarthContainer/style.scss
+++ b/src/containers/EarthContainer/style.scss
@@ -7,18 +7,13 @@
     }
 
     h1 {
-        //color: #dedede;
-        color: #b4caed;
+        color: #dedede;
         position: fixed;
         top: 50px;
         left: 50px;
         z-index: 5;
-        // font-family: 'Woodchuck-Bold';
-        // text-shadow: 2px 2px #4287f5;
-        // font-size: 2em;
         font-size: 1.7em;
         font-family:  "Garet-heavy";
-        //font-family:  "Sora-ExtraBold";
 
         letter-spacing: .1rem;
     }
