--- a/src/components/notification/style.scss
+++ b/src/components/notification/style.scss
@@ -11,7 +11,7 @@
         text-align: center;
         font-size: .9em;
         line-height: 1.4em;
-        opacity: 100%;
+        opacity: 1;
     }
 }
 
@@ -29,7 +29,7 @@
         text-align: center;
         font-size: .9em;
         line-height: 1.4em;
-        opacity: 100%;
+        opacity: 1;
     }
 }
 
@@ -47,7 +47,7 @@
         text-align: center;
         font-size: .9em;
         line-height: 1.4em;
-        opacity: 100%;
+        opacity: 1;
     }
 }
 
@@ -65,7 +65,7 @@
         text-align: center;
         font-size: .9em;
         line-height: 1.4em;
-        opacity: 100%;
+        opacity: 1;
     }
 }
 
@@ -86,6 +86,6 @@
         font-size: .9em;
         width: 392px;
         line-height: 1.4em;
-        opacity: 100%;
+        opacity: 1;
     }
 }
