--- a/src/components/sightingcard/style.scss
+++ b/src/components/sightingcard/style.scss
@@ -1,9 +1,9 @@
 @keyframes fadein {
     from {
-        opacity: 0%;
+        opacity: 0;
     }
     to {
-        opacity: 100%;
+        opacity: 100;
     }
 }
 
@@ -16,7 +16,7 @@
     padding: 5px 15px 5px 15px;
 
     font-family: "Basier";
-    opacity: 0%;
+    opacity: 0;
     animation-name: fadein;
     animation-duration: .6s;
     animation-fill-mode: forwards;
