--- a/src/components/splashpage/style.scss
+++ b/src/components/splashpage/style.scss
@@ -147,10 +147,10 @@ $breakpoints: (
 
     @keyframes fadein {
         from {
-            opacity: 0%
+            opacity: 0;
         }
         to {
-            opacity: 100%
+            opacity: 1;
         }
     }
 
@@ -178,7 +178,7 @@ $breakpoints: (
         top: 125px;
         left: 50px;
         z-index: 8;
-        opacity: 0%;
+        opacity: 0;
         animation-name: fadein;
         animation-delay: 1.2s;
         animation-duration: 1.5s;
@@ -188,10 +188,10 @@ $breakpoints: (
 
     @keyframes blink {
         from {
-            opacity: 100%
+            opacity: 1;
         }
         to {
-            opacity: 0%
+            opacity: 0;
         }
     }
 
@@ -203,7 +203,7 @@ $breakpoints: (
         top: 6%;
         right: 4%;
         z-index: 8;
-        opacity: 0%;
+        opacity: 0;
         animation-name: fadein, blink;
         animation-iteration-count: 1, infinite;
         animation-direction: normal, alternate;
