--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -1,11 +1,11 @@
 $breakpoints: (
-    'xsmall'    : 0px, // mobile-m max=375px
-    'small'     : 376px, // mobile-l max=425px
-    'medium'    : 426px, // tablet max=768px
-    'large'     : 769px, // laptop-m max=1024px => ipad pro falls under this
-    'xlarge'    : 1025px, // laptop-l max=1440px
-    'xxlarge'   : 1440px, // 4k max=2560px
-    'xxxlarge'  : 2560px
+    'xsmall'      : 0px,    // mobile-m max=375px
+    'small'       : 376px,  // mobile-l max=425px
+    'medium'      : 426px,  // tablet max=768px
+    'large'       : 769px,  // laptop-m max=1024px => ipad pro falls under this
+    'xlarge'      : 1025px, // laptop-l max=1440px
+    'xxlarge'     : 1440px, // 4k max=2560px
+    'xxxlarge'    : 2560px
 );
 
 @mixin breakpoint-all {
@@ -59,11 +59,11 @@ $breakpoints: (
 }
 
 @mixin breakpoint-medium-up {
-    $min-value: map-get($breakpoints, medium);
+  $min-value: map-get($breakpoints, medium);
 
-    @media (min-width: $min-value){
-        @content;
-    }
+  @media (min-width: $min-value){
+    @content;
+  }
 }
 
 @mixin breakpoint-large-only {
@@ -78,7 +78,7 @@ $breakpoints: (
 @mixin breakpoint-large-down {
     $max-value: map-get($breakpoints, xlarge) - 1;
 
-    @media (max-width: $max-value){
+    @media (max-width: $max-value), (max-height: 620px){
         @content;
     }
 }
@@ -136,7 +136,7 @@ $breakpoints: (
 @mixin breakpoint-xxlarge-up {
     $min-value: map-get($breakpoints, xxlarge);
 
-    @media (min-width: $min-value){
+    @media (min-width: $min-value) , (min-height: 700px){
         @content;
     }
 }
